@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: dbd_mysql.c,v 1.26 2007/03/23 09:43:16 bizenn Exp $
+ * $Id: dbd_mysql.c,v 1.27 2007/04/17 14:38:38 bizenn Exp $
  */
 
 #include "dbd_mysql.h"
@@ -561,9 +561,14 @@ void raise_mysql_stmt_error(MYSQL_STMT *stmt, const char *msg)
  */
 extern void Scm_Init_dbd_mysqllib(ScmModule*);
 
+static const char *load_default_groups[]
+= {"mysql", "client", NULL};
+
 void Scm_Init_dbd_mysql(void)
 {
     ScmModule *mod;
+    int   ac = 1;
+    char *av[] = { "dbd.mysql" }; /* DUMMY */
 
     /* Register this DSO to Gauche */
     SCM_INIT_EXTENSION(dbd_mysql);
@@ -589,4 +594,6 @@ void Scm_Init_dbd_mysql(void)
 
     /* Register stub-generated procedures */
     Scm_Init_dbd_mysqllib(mod);
+
+    load_defaults("my", load_default_groups, &ac, &av);
 }
