@@ -1,3 +1,8 @@
+2007-04-17  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: dbd_mysql.c
+	  Now load default configurations from my.cnf file.
+
 2007-03-23  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Rename: config.h to acconfig.h
